--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -28,5 +28,5 @@
         <button type="submit">Save Changes</button>
     </form>
 
-    <a href="{{ url_for('forum.jobs') }}">Cancel</a>
+    <a href="{{ url_for('CZN.jobs') }}">Cancel</a>
 {% endblock %}
