--- a/templates/edit_resume.html
+++ b/templates/edit_resume.html
@@ -27,7 +27,7 @@
         <button type="submit">Save Changes</button>
     </form>
 
-    <a href="{{ url_for('forum.resumes') }}">Cancel</a>
+    <a href="{{ url_for('CZN.resumes') }}">Cancel</a>
 
     <script>
         function updateFileName() {
