--- a/templates/register.html
+++ b/templates/register.html
@@ -27,10 +27,22 @@
                     <label for="{{ form.email.id }}">Электронная почта:</label>
                     {{ form.email }}
                 </div>
+                    <div class="form-group">
+                        <label for="{{ form.phone_number.id }}">Номер телефона:</label>
+                        {{ form.phone_number }}
+                    </div>
+                <div class="form-group">
+                        <label for="{{ form.employer_status.id }}">Статус работодателя:</label>
+                        {{ form.employer_status(class="form-check-input") }}
+
+                        <!-- Добавлено скрытое поле для передачи значения False, если флажок не установлен -->
+                        <input type="hidden" name="{{ form.employer_status.name }}" value="false">
+                    </div>
                 <div class="form-group">
                     <label for="{{ form.password.id }}">Пароль:</label>
                     {{ form.password }}
                 </div>
+
                 <div class="form-group">
                     <label for="{{ form.confirm_password.id }}">Подтвердите пароль:</label>
                     {{ form.confirm_password }}
