--- a/templates/show_job.html
+++ b/templates/show_job.html
@@ -7,7 +7,9 @@
 {% block content %}
     <h1>{{ job.title }}</h1>
     <p>{{ job.description }}</p>
-    <p>Requirements: {{ job.requirements }}</p>
+    <p>Требования: {{ job.requirements }}</p>
+    <p>Статус: {% if job.status %}Одобрена{% else %}Неодобрена{% endif %}</p>
 
-    <a href="{{ url_for('forum.jobs') }}">Back to Jobs</a>
+
+    <a href="{{ url_for('CZN.jobs') }}">Назад к вакансиям</a>
 {% endblock %}
