--- a/templates/create_job.html
+++ b/templates/create_job.html
@@ -29,6 +29,6 @@
     <label for="image_file">Job Image:</label>
     <input type="file" name="image_file" id="image_file" accept="image/*"><br>
 
-    <button type="submit" class = "lil">Create Job</button>
+    <button type="submit" class="for_other_buttons" >Create Job</button>
   </form>
 {% endblock %}
