--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,19 +2,21 @@
 
 {% block title %}Личный кабинет{% endblock %}
 {% block content %}
-    <h1>Добро пожаловать, {{ current_user.firstname }} {{ current_user.lastname }}!</h1>
-    <p>Ваш email: {{ current_user.email }}</p>
-    <p>Ваш номер телефона: {{ current_user.phone_number }}</p>
-    <p>Ваш регион: {{ current_user.region.region }}</p>
+    <div class = "dashboard">
+        <h3>Добро пожаловать, {{ current_user.firstname }} {{ current_user.lastname }}!</h3>
+        <p>Ваш email: {{ current_user.email }}</p>
+        <p>Ваш номер телефона: {{ current_user.phone_number }}</p>
+        <p>Ваш регион: {{ current_user.region.region }}</p>
 
     {% if current_user.is_admin %}
         <!-- Здесь может быть ваш код для панели админа -->
-        <h2>Вы администратор</h2>
+        <p>Вы администратор</p>
     {% elif current_user.employer_status %}
         <!-- Здесь может быть ваш код для панели работодателя -->
-        <h2>Вы работодатель</h2>
+        <p>Вы работодатель</p>
     {% else %}
         <!-- Здесь может быть ваш код для панели работника -->
-        <h2>Вы работник</h2>
+        <p>Вы работник</p>
     {% endif %}
+    </div>
 {% endblock %}
