--- a/static/styles.css
+++ b/static/styles.css
@@ -409,6 +409,7 @@ main {
     font-family: "century gothic", sans-serif;
     font-weight : lighter;
     margin-bottom: 2%;
+
 }
 .microbutton2:hover {
     background : #f8ef02;
@@ -428,5 +429,23 @@ main {
     padding: 10px;
 }
 .microbutton3:hover {
+    background : #f8ef02;
+}
+
+
+.microbutton4 {
+    width: 10%;
+    background: #800080;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    border: 1px solid #ffffff;
+    font-size : 60%;
+    font-family: "century gothic", sans-serif;
+    font-weight : lighter;
+    margin: 10px;
+
+}
+.microbutton4:hover {
     background : #f8ef02;
 }
